docs: update tracker — 63/65 issues resolved (97%), verified against actual code
N0-N18 status corrected: 17 were marked OPEN but already fixed in code.
Only N9 (rate limiter in-memory) and N11 (boot time partial) remain open.
Stale JAVA_TOOL_OPTIONS audit section replaced with verified 19-flag list.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>